[tool.poetry]
name = "async-requests"
version = "0.1.0"
description = "Repo para facilitar requisições assíncronas"
authors = ["Marco Antônio <marco.netto@mjv.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
aiometer = "^0.5.0"
rich = "^13.7.1"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
